state management using useReducer

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-project-1/node_modules
-project-1/dist
-project-2/node_modules
-project-2/dist
-project-3/node_modules
-project-3/dist
-project-4/node_modules
-project-4/dist
-project-5/node_modules
-project-5/dist
+**/node_modules
+**/dist
